added modified feature

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="code.js"></script>
 
 <div class="split">
-	<div class="topbar next left"><span id="fname">new buffer</span><span id="status"> $</span></div>
+	<div class="topbar next left"><span id="fname">new buffer</span><span id="status"></span></div>
 	<div class="topbar next right">
 		<span onclick="save()">SAVE </span><span onclick="oopen()">OPEN </span><span onclick="edit()">EDIT </span>
 	</div>
