now newlines cannot be added to filename

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div class="split">
 	<div class="topbar next left">
 		<span class="fname-outer">
-			<span class="fname-inner" id="fname" contenteditable=true spellcheck=false onclick="fname(this)" placeholder="new buffer">new buffer</span>
+			<span class="fname-inner" id="fname" contenteditable=true spellcheck=false onclick="fname()" onkeypress="check(event)" placeholder="new buffer">new buffer</span>
 		</span><span id="status"> </span>
 	</div>
 	<div class="topbar next right">
